<resources>
    <string name="app_name">Xiimba</string>
    <string name="inicio_usuario">Usuario</string>
    <string name="inicio_password">Contraseña</string>
    <string name="inicio_sesion">Entrar</string>
    <string name="inicio_primera">¿No estas registrado?</string>
    <string name="inicio_registrateya">Registro</string>
    <string name="title_activity_mapa_didactica">MapaDidactica</string>
    <string name="registro_titulo">Registrate</string>
    <string name="registro_btnregistrar">Registrar</string>
    <string name="registro_lblNombre">Nombre</string>
    <string name="registro_lblApPaterno">Apellido Paterno</string>
    <string name="registro_lblApMaterno">Apellido Materno</string>
    <string name="registro_lblCorreo">Correo</string>
    <string name="registro_lblPais">Pais</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
